--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.security.enabled=true
+security.basic.realm=My Realm
+spring.security.user.name=user
+spring.security.user.password=password
+spring.security.csrf.enabled=false
+
 spring.application.name=BankSystem-SpringBoot
+server.port=8080
+
+
+app.jwtSecret=yourBase64EncodedSecretKeyHere
+
+app.jwtExpirationInMs=86400000
